--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -16,13 +16,20 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>CGEC-TIMES</title>
+    <style>
+      /* Add this to prevent horizontal scrolling */
+  html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
+    </style>
   </head>
   <body style="background-color: #eeecce;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
 
- 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
